--- a/Frontend/Netflix/src/app/components/login/login.component.html
+++ b/Frontend/Netflix/src/app/components/login/login.component.html
@@ -1,10 +1,5 @@
+<p>login works!</p>
 
-<!-- Toolbar -->
-<div class="toolbar" role="banner">
-<div align="center">
-  <span>  &nbsp; &nbsp;  Devoteam Netflix App #2020 </span>
-</div>
-</div>
 
 
 <div class="content" role="main">
@@ -40,6 +35,3 @@
   </svg>
 
 </div>
-
-
-<router-outlet></router-outlet>
