fixing 2nd component

--- a/Frontend/Netflix/src/app/components/movie/movie.component.html
+++ b/Frontend/Netflix/src/app/components/movie/movie.component.html
@@ -1,3 +1,7 @@
 <p>movie works!</p>
+<p>movie works!</p>
+<p>movie works!</p>
+<p>movie works!</p>
+<p>movie works!</p>
+<p>movie works!</p>
 
-{{s}}
