working on ping

--- a/Frontend/Netflix/src/app/app.component.html
+++ b/Frontend/Netflix/src/app/app.component.html
@@ -6,8 +6,11 @@
 </div>
 </div>
 
+<div>
 <h2>Devoteam Netflix app #2020</h2>
-<h2>Devoteam Netflix app #2020</h2>
+<h3>Devoteam Netflix app #2020</h3>
+</div>
+
 
 
 
