--- a/Frontend/Netflix/src/app/components/movie/movie.component.html
+++ b/Frontend/Netflix/src/app/components/movie/movie.component.html
@@ -1,7 +1,14 @@
-<p>movie works!</p>
-<p>movie works!</p>
-<p>movie works!</p>
-<p>movie works!</p>
-<p>movie works!</p>
-<p>movie works!</p>
+<div>
+	 <p>Movie Component</p>
+	 
+	 <button> Ping backend </button>
+	 
+</div>
+
+
+
+
+
+
+
 
