communication between backend and frontend

--- a/Frontend/Netflix/src/app/components/login/login.component.html
+++ b/Frontend/Netflix/src/app/components/login/login.component.html
@@ -34,3 +34,6 @@
  
  <div> Message of the backend: {{s}} </div>
 
+ <button (click)="getBestMovie()"> Search best movie </button> 
+ 
+ <div> Message of the backend: {{movie}} </div>
