--- a/Frontend/Netflix/src/app/components/movie/movie.component.html
+++ b/Frontend/Netflix/src/app/components/movie/movie.component.html
@@ -4,16 +4,25 @@
 
 	<button (click)="ping()">Ping backend</button>
 
-		<div> <p>Message of the backend: {{s}}<p> </div>
+	<div>
+		<p>Message of the backend: {{s}}
+		<p>
+	</div>
 
 	<button (click)="getBestMovie()">Search best movie</button>
 
-	<div> <p>Message of the backend: {{movie}}<p> </div>
+	<div>
+		<p>Message of the backend: {{movie}}
+		<p>
+	</div>
 
 
-	<button (click)="getBestMovie()">List some movies:</button>
+	<button (click)="getMovies()">List some movies:</button>
 
-	<div> <p> x <p> </div>
+	<div>
+		<p>
+		<li *ngFor="let m of movies">{{ m.title }}</li>
+	</div>
 
 </div>
 
