Started with security

--- a/Frontend/Netflix/src/app/components/login/login.component.html
+++ b/Frontend/Netflix/src/app/components/login/login.component.html
@@ -8,7 +8,7 @@
   <p>Choose the desired login: </p>
 
   <div class="card-container">
-    <a class="card" target="_blank" rel="noopener" href="TODO">
+    <a class="card" target="_blank" rel="noopener" href="http://localhost:8903">
    
       <span>Anonymous User</span>
 
