--- a/Frontend/Netflix/src/app/app.component.html
+++ b/Frontend/Netflix/src/app/app.component.html
@@ -10,14 +10,23 @@
 
 <router-outlet> </router-outlet>
 
+
+
 <!-- <div class="toolbar" role="banner">
 <div style="text-align: center">
   <span>  &nbsp; &nbsp;  Devoteam Netflix App #2020 </span>
 </div>
 </div> -->
 
+<p style="margin-bottom:3cm"> </p>
 
 
+Username: {{username}}
+<div style="text-align:left">
+    <button (click)="getUserName()" >
+      <span>Ping Username</span>
+	 </button>
+</div>
 
 
 <svg id="clouds" alt="Gray Clouds Background"
