--- a/Frontend/Netflix/src/app/components/login/login.component.html
+++ b/Frontend/Netflix/src/app/components/login/login.component.html
@@ -13,7 +13,7 @@
       <span>Anonymous User</span>
 
     </a>
-    <a class="card" target="_blank" rel="noopener" href="TODO">
+    <a class="card" target="_blank" rel="noopener" href="http://localhost:8080/login">
       
       <span>Authenticated User</span>
 	 </a>
