frontend van user verder, werkt nog niet perfect

--- a/Frontend/Netflix/src/app/components/main/main.component.html
+++ b/Frontend/Netflix/src/app/components/main/main.component.html
@@ -12,6 +12,10 @@
     <a class="card" rel="noopener" href="/movies">
       
       <span>Explore movies</span>
-	 </a>
+   </a>
+   <a class="card" rel="noopener" href="/user">
+      
+    <span>Explore users</span>
+ </a>
   </div>
 
