--- a/Frontend/Netflix/src/app/components/user/user.component.html
+++ b/Frontend/Netflix/src/app/components/user/user.component.html
@@ -5,15 +5,16 @@
 	<button (click)="getUsers()">All users</button>
 
 	<div>
-        <li *ngFor="let u of users">{{u.first_name}}</li>
-        <p>
+		<p>
+		<li *ngFor="let u of users">{{u.email}}</li>
+		</p>
+		<br>
 	</div>
 
 	<button (click)="getWelcomeMessage()">Welcome Message</button>
 
 	<div>
-		<p>Message of the backend: {{welcomeMessage}}
-		<p>
+		<p>Message: {{error}}</p>
 	</div>
 
 </div>
