started Moviedetail frontend

--- a/Frontend/Netflix/src/app/components/main/main.component.html
+++ b/Frontend/Netflix/src/app/components/main/main.component.html
@@ -9,13 +9,18 @@
     <a class="card" rel="noopener" href="/login">
       <span>Login</span>
     </a>
-    <a class="card" rel="noopener" href="/movies">
+    <a class="card" rel="noopener" href="/movie">
       
       <span>Explore movies</span>
    </a>
+   
+  <a class="card" rel="noopener" href="/route">
+      
+      <span>Test routing</span>
+   </a>
+   
    <a class="card" rel="noopener" href="/user">
       
     <span>Explore users</span>
  </a>
   </div>
-
