--- a/Frontend/Netflix/src/app/app.component.css
+++ b/Frontend/Netflix/src/app/app.component.css
@@ -1,4 +1,33 @@
 
+mat-footer-row, mat-header-row, mat-row {
+  border-bottom-width: 10px;
+}
+
+td.mat-cell {
+ /* row padding */
+ padding: 16px 0;
+ /* row border */
+ border-bottom: 1px solid #ffa600;
+ border-top: 1px solid #ffa600;
+}
+
+td.mat-cell:first-child {
+  /* row border */
+  border-left: 1px solid #ffa600;
+}
+
+td.mat-cell:last-child {
+  /* row border */
+  border-right: 1px solid #ffa600;
+}
+
+table {
+  /* row spacing / margin */
+  border-spacing: 0 8px !important;
+} 
+
+
+
   :host {
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
     font-size: 14px;
