--- a/Frontend/Netflix/src/app/components/movie/movie.component.html
+++ b/Frontend/Netflix/src/app/components/movie/movie.component.html
@@ -1,21 +1,45 @@
-<h1> Movie explorer page: </h1>
+<h1>Movie explorer page:</h1>
 
-<table class="table mat-table" datatable>
-	<thead>
-		<tr>
-			<th>ID</th>
-			<th>Title</th>
-			<th>Genre</th>
-			<th>Vote stats</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr *ngFor="let m of movies">
-			<td>{{m.movieId}}</td>
-			<td>{{m.title}}</td>
-			<td>{{m.mainGenre}}</td>
-			<td>{{m.score}} ( {{m.nbOfVotes}} )</td>
-			<a [routerLink]="['/movie/detail', m.movieId]"> Explore </a>
-		</tr>
-	</tbody>
+
+
+
+
+
+<table mat-table [dataSource]="movieTableDS" class="mat-elevation-z8" style="width:100%">
+
+  <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+
+
+  <ng-container matColumnDef="id">
+    <th mat-header-cell *matHeaderCellDef> ID: </th>
+    <td mat-cell *matCellDef="let element"> {{element.movieId}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="title">
+    <th mat-header-cell *matHeaderCellDef> Title:  </th>
+    <td mat-cell *matCellDef="let element"> {{element.title}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="genre">
+    <th mat-header-cell *matHeaderCellDef> Genre </th>
+    <td mat-cell *matCellDef="let element"> {{element.mainGenre}} </td>
+  </ng-container>
+
+  <ng-container matColumnDef="voteStats">
+    <th mat-header-cell *matHeaderCellDef> Vote Stats </th>
+    <td mat-cell *matCellDef="let element"> {{element.score}} (  {{element.nbOfVotes}}  ) </td>
+  </ng-container>
+
+  <ng-container matColumnDef="link">
+    <th mat-header-cell *matHeaderCellDef> Link </th>
+    <td mat-cell *matCellDef="let element">  <a [routerLink]="['/movie/detail', element.movieId]"> Explore </a></td>
+  </ng-container>
+
+
+  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+  <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
 </table>
+
+
