Extending the Rest communication between fe & be MovieExplorer

--- a/Frontend/Netflix/src/app/components/movie-detail/movie-detail.component.html
+++ b/Frontend/Netflix/src/app/components/movie-detail/movie-detail.component.html
@@ -11,6 +11,9 @@
 <tr> <th> Stats </th>  <th>  {{details.score}} ( {{details.nbOfVotes}} )   </th> </tr>
 </table>
 
+<p> Description:  <br> {{details.description}} </p>
+
+<p>Link: <a href="//{{getMovieLink()}}" >  {{getMovieLink()}} </a>    </p> 
 
 
 
