--- a/Frontend/Netflix/src/app/components/movie/movie.component.html
+++ b/Frontend/Netflix/src/app/components/movie/movie.component.html
@@ -5,7 +5,7 @@
 
 
 
-<table mat-table [dataSource]="movieTableDS" class="mat-elevation-z8" style="width:100%">
+<table mat-table [dataSource]="movieTableDS" class="mat-elevation-z8" style="width:80%">
 
   <!--- Note that these columns can be defined in any order.
         The actual rendered columns are set as a property on the row definition" -->
@@ -36,6 +36,17 @@
     <th mat-header-cell *matHeaderCellDef> Link </th>
     <td mat-cell *matCellDef="let element">  <a [routerLink]="['/movie/detail', element.movieId]"> Explore </a></td>
   </ng-container>
+
+  <ng-container matColumnDef="imagee">
+    <th mat-header-cell *matHeaderCellDef> Image: </th>
+    <td mat-cell *matCellDef="let element">  x </td>
+  </ng-container>
+    
+      <ng-container matColumnDef="image">
+    <th mat-header-cell *matHeaderCellDef> Image: </th>
+    <td mat-cell *matCellDef="let element">  <img src={{element.imageUrl}} height="200"  /> </td>
+  </ng-container>
+
 
 
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
