--- a/Frontend/Netflix/src/app/components/main/main.component.html
+++ b/Frontend/Netflix/src/app/components/main/main.component.html
@@ -23,4 +23,9 @@
       
     <span>Explore users</span>
  </a>
+
+  <a class="card" rel="noopener" href="/rating">
+        
+    <span>Explore ratings</span>
+  </a>
   </div>
