MovieExplorer, finishing parts.

--- a/Frontend/Netflix/src/app/components/movie-detail/movie-detail.component.html
+++ b/Frontend/Netflix/src/app/components/movie-detail/movie-detail.component.html
@@ -19,6 +19,17 @@
 
 <p>Link: <a href="//{{getMovieLink()}}" >  {{getMovieLink()}} </a>    </p> 
 
+<div> 
+ <h3> Trailer: </h3> 
+ <video width="640" height="380" src={{details.movieUrl}} controls> </video>  
+ </div>
+
+
+
+
+
+
+
 
 
 
