Tested + added to startscript

--- a/Frontend/Netflix/src/app/components/movie-detail/movie-detail.component.html
+++ b/Frontend/Netflix/src/app/components/movie-detail/movie-detail.component.html
@@ -7,7 +7,7 @@
 <img src={{details.imageUrl}}/> 
 
 
-<table> 
+<table style="margin-left:0"> 
 <tr> <th> Id  </th>  <th> {{details.movieId}} </th> </tr>
 <tr> <th> Title </th>  <th> {{details.title}} </th> </tr>
 <tr> <th> Genre </th>  <th>  {{details.mainGenre}}</th> </tr>
