--- a/Frontend/Netflix/src/app/components/specific-user/specific-user.component.html
+++ b/Frontend/Netflix/src/app/components/specific-user/specific-user.component.html
@@ -6,18 +6,50 @@
 
 <br><br>
 
+<p>Ratings: {{ratings}}</p>
 
-<table id="table_small">
-    <thead>
-        <tr>
-            <th>Id of Movie</th>
-            <th>Rating</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr *ngFor="let r of ratings">
-            <td>{{r.movieId}}</td>
-            <td>{{r.rating}}</td>
-        </tr>
-    </tbody>
-</table>
+<div *ngIf="ratings != ''">
+    <table id="table_small">
+        <thead>
+            <tr>
+                <th>Id of Movie</th>
+                <th>Rating</th>
+                <th>Delete Rating</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let r of ratings">
+                <td>{{r.movieId}}</td>
+                <td>{{r.rating}}</td>
+                <td><button (click)="deleteRating(r.id);"> Delete Rating </button></td>
+            </tr>
+        </tbody>
+    </table>
+</div>
+
+<div *ngIf="!(ratings != '')">
+    <h4>You have no ratings</h4>
+</div>
+<br><br>
+
+<div>
+    <form formGroup="ratingForm" (ngSubmit)="addRating()" novalidate>
+        <div *ngIf="validMessage != ''">
+          <h3 class="has-info">{{validMessage}}</h3>
+        </div>
+        <div class="form-group">
+          <label>Id of the User</label>
+          <input type="text" class="form-control" formControlName="user_id" required/>
+        </div>
+        <div class="form-group">
+          <label>Id of the movie</label>
+          <input type="text" class="form-control" formControlName="movie_id" required/>
+        </div>
+        <div class="form-group">
+          <label>Rating of the movie</label>
+          <input type="text" class="form-control" formControlName="rating" required/>
+        </div>
+    
+        <button type="submit" class="btn btn-primary" >Submit</button>
+      </form>
+</div>
