--- a/Frontend/Netflix/src/app/components/specific-user/specific-user.component.html
+++ b/Frontend/Netflix/src/app/components/specific-user/specific-user.component.html
@@ -6,8 +6,6 @@
 
 <br><br>
 
-<p>Ratings: {{ratings}}</p>
-
 <div *ngIf="ratings != ''">
     <table id="table_small">
         <thead>
@@ -32,24 +30,26 @@
 </div>
 <br><br>
 
-<div>
-    <form formGroup="ratingForm" (ngSubmit)="addRating()" novalidate>
-        <div *ngIf="validMessage != ''">
-          <h3 class="has-info">{{validMessage}}</h3>
+<div style="border: 2px solid black; width: '40%'; text-align: center; margin-left: auto; margin-right: auto;">
+    <form [formGroup]="ratingForm" (ngSubmit)="addRating()" novalidate>
+        <div *ngIf="validMessage != '/'">
+            <h3 class="has-info">{{validMessage}}</h3>
+          </div>
+        <div class="form-group">
+            <label>Id of the Movie:</label>
+            <input type="text" class="form-control" formControlName="movieId" required/>
         </div>
         <div class="form-group">
-          <label>Id of the User</label>
-          <input type="text" class="form-control" formControlName="user_id" required/>
+            <label>Rating of the Movie:</label>
+            <select class="form-group" formControlName="rating" required>
+                <option value="">Please select a rating for this movie</option>
+                <option *ngFor="let rating_option of rating_value_options"
+                        [value]="rating_option">
+                        {{rating_option}}
+                </option>
+            </select>
         </div>
-        <div class="form-group">
-          <label>Id of the movie</label>
-          <input type="text" class="form-control" formControlName="movie_id" required/>
-        </div>
-        <div class="form-group">
-          <label>Rating of the movie</label>
-          <input type="text" class="form-control" formControlName="rating" required/>
-        </div>
-    
-        <button type="submit" class="btn btn-primary" >Submit</button>
+        
+        <button type="submit" class="btn btn-primary" [disabled]="!ratingForm.valid">Submit</button>
       </form>
 </div>
