Streamservice: created microservice, uploaded testvideo, coupled with fe and implemented fe

--- a/Frontend/Netflix/src/app/components/movie-detail/movie-detail.component.html
+++ b/Frontend/Netflix/src/app/components/movie-detail/movie-detail.component.html
@@ -23,6 +23,11 @@
  <h3> Trailer: </h3> 
  <video width="640" height="380" src={{details.movieUrl}} controls> </video>  
  </div>
+ 
+ <div style="text-align:left;font-size:30px">
+ <a [routerLink]="['/movie/stream', details.movieId]"  > 
+ Watch now </a>
+ </div>
 
 
 
