--- a/Frontend/Netflix/src/app/components/user/user.component.html
+++ b/Frontend/Netflix/src/app/components/user/user.component.html
@@ -25,5 +25,29 @@
 			</tr>
 		</tbody>
 	</table>
+</div>
 
+
+<br><br>
+<div style="border: 2px solid black; width: '40%'; text-align: center; margin-left: auto; margin-right: auto;">
+    <h4><u>Add a new User</u></h4><br>
+    <form [formGroup]="userForm" (ngSubmit)="addUser();" novalidate>
+        <div *ngIf="validMessage != '/'">
+            <h3 class="has-info">{{validMessage}}</h3>
+        </div>
+        <div class="form-group">
+            <label>First Name:</label>
+            <input type="text" class="form-control" formControlName="firstName" required/>
+		</div>
+		<div class="form-group">
+            <label>Last Name:</label>
+            <input type="text" class="form-control" formControlName="lastName" required/>
+		</div>
+		<div class="form-group">
+            <label>Email:</label>
+            <input type="email" class="form-control" formControlName="email" required/>
+        </div>
+        
+        <button type="submit" class="btn btn-primary" [disabled]="!userForm.valid">Submit</button>
+      </form>
 </div>
