--- a/Frontend/Netflix/src/app/components/movie-stream/movie-stream.component.html
+++ b/Frontend/Netflix/src/app/components/movie-stream/movie-stream.component.html
@@ -1,12 +1,10 @@
 <h1>Movie Stream Page</h1>
 
- <!-- 
-<div> 
- <video width="60%" height="60%" src="http://localhost:4200/server/stream/test" controls> </video>  
- </div>
-  -->
+ <!-- Real url: http://localhost:4200/server/stream/test -->
  
-<div> 
- <video width="60%" height="60%" src="/server/stream/test" controls autoplay>
+ <div> 
+ <video width="60%" height="60%" src={{movieStreamLocation}} controls autoplay >
   </video>  
  </div>
+ 
+}
